# task-progress-tracker

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: deploy-web.yml  release.yml
docs/: AC-CHECKLIST.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/capabilities/: default.json
src-tauri/app/icons/: icon.icns
src-tauri/app/src/: main.rs
src-tauri/persist/: Cargo.toml
src-tauri/persist/src/: lib.rs
src/lib/: store.ts
src/lib/components/: ActiveSection.svelte  AppShell.svelte  ArchiveSection.svelte  ArchiveTree.svelte  BlockNode.svelte  ContextMenu.svelte  HoldSection.svelte  Snackbar.svelte  WorkUnitColumn.svelte  actions.ts  context.ts  stale.ts
src/lib/components/modals/: AnnotationModal.svelte  ConfirmModal.svelte  ModalShell.svelte  WarningModal.svelte
src/lib/dnd/: classify.ts  engine.ts
src/lib/domain/: actions.ts  index.ts  projections.ts  rules.ts  timer.ts  tree.ts  types.ts  undo.ts  validate.ts
src/lib/platform/: browser.ts  index.ts  tauri.ts
src/lib/ui/: clock.ts
tests/components/: stale.test.ts
tests/dnd/: classify.test.ts
tests/domain/: _helpers.ts  actions.test.ts  projections.test.ts  rules.test.ts  timer.test.ts  tree.test.ts  undo.test.ts  validate.test.ts
tests/e2e/: completion-and-archive.spec.ts  creation-and-columns.spec.ts  dnd.spec.ts  fixtures.ts  hold.spec.ts  persistence-and-theme.spec.ts  undo.spec.ts
tests/store/: clock.test.ts  store.test.ts
