[package]
name = "app"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Task Progress Tracker desktop shell (Tauri v2)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
persist = { path = "../persist" }
